Changes since version 0-1.0

	* robust inference is provided with meat and estfunc methods
	defined for mlogit models.

	* subset argument is added to mlogit so that the model may be
	estimated on a subset of alternatives.

	* reflevel argument is added to mlogit which defines the base
	alternative.

	* hmftest implements the Hausman McFadden test for the IIA
	hypothesis.

	* mlogit.data function has been rewriten. It now use the reshape function.

	* logitform class is provided to describe a logit model: update,
	model.matrix and model.frame methods are available.

	
Changes since version 0.1-2

	* major change, most of the package has been rewriten

	* it is now possible to estimate heteroscedastic, nested and mixed
	effects logit model

	* the package doesn't depend any more on maxLik but a specific
	optimization function is provided for efficiency reason

Changes since version 0.1-3

	* mlogit didn't work when the dependent variable was an ordered
	factor in a "wide-shaped" data.frame.

	* the reflevel argument didn't work any more in version 0.1-3.

Changes since version 0.1-4

	* if the choice variable is not an ordered factor, use as.factor()
	instead of class() <- "factor"

	* cov.mlogit, cor.mlogit, rpar , med, rg, stdev, mean functions are added to
	extract and analyse random coefficients. 
	
	* a panel argument is added to mlogit so that mixed models with
	repeated observation can be estimated using panel methods or not

	* a problem with the weights argument is fixed
